# lui

./: .gitignore  CMakeLists.txt  COPYING  README.md  lui-cairo.pc.in  lui-gl.pc.in  lui.pc.in
.claude/skills/: architecture.md  build.md  nanovg-backend.md
.github/: .copilot-instructions.md  copilot-instructions.md
.github/workflows/: build.yml  check-prebuilds.yml  pages.yml  prebuild.yml
.reuse/: dep5
bindings/lua/: CMakeLists.txt  bindings.h  lui.cpp  proxy.hpp
bindings/lua/lui/: class.lua
bindings/lua/sol/: config.hpp  forward.hpp  sol.hpp
bindings/node/: .gitignore  .npmignore  README.md  binding.gyp  demo.js  index.js  lui_node.cpp  package-lock.json  package.json
cmake/: SetupCairo.cmake  mingw32.cmake
demo/: CMakeLists.txt  Info.plist.in  buttons.hpp  demo.cpp  demo.hpp  dials.cpp  embedding.hpp  entry.cpp  images.cpp  main.cpp  menu_bar.hpp  shapes.cpp  sliders.cpp  utils.hpp
doc/: CMakeLists.txt  Doxyfile.in  backends.rst  conf.py.in  development.rst  graphics.rst  index.rst  overview.rst.in  projects.rst  styleguide.rst  summary.rst  uis.rst  widgets.rst
doc/ui/: event-loop.rst  events.rst  main.rst  views.rst
include/lui/: button.hpp  cairo.hpp  color.hpp  context.hpp  core_graphics.hpp  direct2d.hpp  display.hpp  embed.hpp  entry.hpp  fill.hpp  fitment.hpp  font.hpp  gdi.hpp  graphics.hpp  image.hpp  input.hpp  justify.hpp  lui.h  lui.hpp  main.hpp  memory.hpp  notify.hpp  opengl.hpp  optional.hpp  path.hpp  point.hpp  range.hpp  rectangle.hpp  slider.hpp  string.hpp  style.hpp  transform.hpp  view.hpp  weak_ref.hpp  widget.hpp
scripts/: build-cairo-macos.sh  demo.lua  demo.sh  format.sh
src/: CMakeLists.txt  button.cpp  cairo.cpp  core_graphics.cpp  direct2d.cpp  embed.cpp  embed_mac.mm  embed_win32.cpp  embed_x11.cpp  entry.cpp  fitment.cpp  font.cpp  gdi.cpp  gl.hpp  graphics.cpp  image.cpp  mac_cg.h  mac_cg.m  main.cpp  nanovg.cpp  nanovg.hpp  nanovglib.cpp  opengl.cpp  slider.cpp  style.cpp  view.cpp  widget.cpp  win_direct2d.c  win_direct2d.cpp  win_gdi.c
src/detail/: default_style.hpp  embed.hpp  main.hpp  view.hpp  widget.hpp
src/stb/: image.hpp  image.ipp  typeface.hpp
src/ui/: cairo.cpp  entry.cpp  graphics.cpp  nanovg.cpp  nanovg.hpp  nanovglib.cpp  opengl.cpp  pugl.cpp  pugl.mm  view.cpp  vkvg.cpp  widget.cpp
src/ui/detail/: view.hpp
src/ui/pugl/: meson_options.txt
test/: CMakeLists.txt  color_test.cpp  fitment_test.cpp  font_test.cpp  main_unit.cpp  observer_test.cpp  path_test.cpp  point_test.cpp  range_test.cpp  rectangle_test.cpp  string_test.cpp  tests.hpp  transform_test.cpp  weak_ref_test.cpp
