# Documentation build configuration
# This is a placeholder for documentation building
# You can configure Doxygen or Sphinx here if needed

# find_package(Doxygen)
# if(DOXYGEN_FOUND)
#     set(DOXYGEN_INPUT_DIR ${CMAKE_SOURCE_DIR}/doc)
#     set(DOXYGEN_OUTPUT_DIR ${CMAKE_BINARY_DIR}/doc/doxygen)
#     configure_file(
#         ${CMAKE_SOURCE_DIR}/doc/Doxyfile.in
#         ${CMAKE_BINARY_DIR}/Doxyfile
#         @ONLY
#     )
# endif()
